style(Summary.module.scss): adjust flex properties for child divs on small screens to ensure proper layout and responsiveness

--- a/src/components/summary/summary/Summary.module.scss
+++ b/src/components/summary/summary/Summary.module.scss
@@ -18,6 +18,11 @@
 
     @include display.media-breakpoint-down(sm) {
         flex-direction: column;
+
+        >div {
+            flex-basis: 100%;
+            max-width: 100%;
+        }
     }
 
     >div {
